--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Gate365</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Gate365</string>
+    <string name="title_toolbar">Gate365</string>
 </resources>
